<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/manager" />
        </android.support.v7.widget.Toolbar>

        <View
            android:id="@+id/view_toolbar_divider"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/darker_gray"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_about_us"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_rl">

        <android.support.constraint.Guideline
            android:id="@+id/gl_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_test_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="类别"
            android:visibility="visible"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_version_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_about_us" />

        <ImageView
            android:id="@+id/iv_company_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/gl_about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/company_name"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/layout_company_website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout_company_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_company_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_company_website_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_website"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_company_website_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autoLink="web"
                android:text="@string/company_website_value"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_company_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_company_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_contact_phone"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_company_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autoLink="phone"
                android:text="@string/company_contact_phone_value"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>